# py-root-analyzer

./: .gitignore  README.md  analyze_root_files.py  pyproject.toml
configs/: all_cycles.toml  full.toml  quick.toml
src/root_qa/: __init__.py  analyzer.py  cli.py  models.py  render.py  schema.py  stats.py
